fixed a flexbox bug on ie

--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -45,7 +45,7 @@ a:visited {
   flex-direction: column; }
 
 #site-content {
-  flex: 1; }
+  flex: 1 0 auto; }
 
 @media (max-width: 37.5em) {
   .form,
@@ -210,7 +210,8 @@ NAV PAGE
   position: relative;
   padding: 1rem;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  min-height: 40vh; }
   @media (max-width: 37.5em) {
     .card {
       width: 90%; } }
