--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -11,6 +11,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  min-height: 40vh;
 
   @include respond(phone) {
     width: 90%;
@@ -143,6 +144,7 @@
 }
 
 @keyframes shake {
+
   10%,
   90% {
     transform: translate3d(-1px, 0, 0);
