--- a/sass/components/_settings.scss
+++ b/sass/components/_settings.scss
@@ -53,7 +53,7 @@ a:visited {
 }
 
 #site-content {
-    flex: 1;
+    flex: 1 0 auto;
 }
 
 .form,
